syntax = "proto3";

option go_package = "/captenpluginspb";

package captenpluginspb;

service capten_plugins {
    rpc AddGitProject(AddGitProjectRequest) returns (AddGitProjectResponse) {}
    rpc UpdateGitProject(UpdateGitProjectRequest) returns (UpdateGitProjectResponse) {}
    rpc DeleteGitProject(DeleteGitProjectRequest) returns (DeleteGitProjectResponse) {}
    rpc GetGitProjects(GetGitProjectsRequest) returns (GetGitProjectsResponse) {}
    rpc GetGitProjectsForLabel(GetGitProjectsForLabelRequest) returns (GetGitProjectsForLabelResponse) {}

    rpc AddCloudProvider(AddCloudProviderRequest) returns (AddCloudProviderResponse) {}
    rpc UpdateCloudProvider(UpdateCloudProviderRequest) returns (UpdateCloudProviderResponse) {}
    rpc DeleteCloudProvider(DeleteCloudProviderRequest) returns (DeleteCloudProviderResponse) {}
    rpc GetCloudProviders(GetCloudProvidersRequest) returns (GetCloudProvidersResponse) {}
    rpc GetCloudProvidersForLabel(GetCloudProvidersForLabelRequest) returns (GetCloudProvidersForLabelResponse) {}

    rpc RegisterArgoCDProject(RegisterArgoCDProjectRequest) returns (RegisterArgoCDProjectResponse) {}
    rpc GetArgoCDProjects(GetArgoCDProjectsRequest) returns (GetArgoCDProjectsResponse) {}
    rpc UnRegisterArgoCDProject(UnRegisterArgoCDProjectRequest) returns (UnRegisterArgoCDProjectResponse) {}

    rpc RegisterTektonProject(RegisterTektonProjectRequest) returns (RegisterTektonProjectResponse) {}
    rpc GetTektonProjects(GetTektonProjectsRequest) returns (GetTektonProjectsResponse) {}
    rpc UnRegisterTektonProject(UnRegisterTektonProjectRequest) returns (UnRegisterTektonProjectResponse) {}
}

enum StatusCode {
    OK = 0;
    INTERNAL_ERROR = 1;
    INVALID_ARGUMENT = 2;
    NOT_FOUND = 3;
}

message AddGitProjectRequest {
    string projectUrl = 1;
    repeated string labels = 2;
    string lastUpdateTime = 3;
    string accessToken = 4;
}

message AddGitProjectResponse {
    string id = 1;
    StatusCode status = 2;
    string statusMessage = 3;
}

message UpdateGitProjectRequest {
    string id = 1;
    string projectUrl = 2;
    repeated string labels = 3;
    string lastUpdateTime = 4;
    string accessToken = 5;
}

message UpdateGitProjectResponse {
    StatusCode status = 1;
    string statusMessage = 2;
}

message DeleteGitProjectRequest {
    string id = 1;
}

message DeleteGitProjectResponse {
    StatusCode status = 1;
    string statusMessage = 2;
}

message GetGitProjectsRequest {
}

message GitProject {
    string id = 1;
    string projectUrl = 2;
    repeated string labels = 3;
    string lastUpdateTime = 4;
    string accessToken = 5;
}

message GetGitProjectsResponse {
    repeated GitProject gitProjects = 1;
    StatusCode status = 2;
    string statusMessage = 3;
}

message GetGitProjectsForLabelRequest {
    string label = 1;
}

message GetGitProjectsForLabelResponse {
    repeated GitProject projects = 1;
    StatusCode status = 2;
    string statusMessage = 3;
}

message AddCloudProviderRequest {
    repeated string labels = 1;
    string lastUpdateTime = 2;
    string accessKey = 3;
    string secretKey = 4;
}

message AddCloudProviderResponse {
    string id = 1;
    StatusCode status = 2;
    string statusMessage = 3;
}

message UpdateCloudProviderRequest {
    string id = 1;
    repeated string labels = 2;
    string lastUpdateTime = 3;
    string accessKey = 4;
    string secretKey = 5;
}

message UpdateCloudProviderResponse {
    StatusCode status = 1;
    string statusMessage = 2;
}

message DeleteCloudProviderRequest {
    string id = 1;
}

message DeleteCloudProviderResponse {
    StatusCode status = 1;
    string statusMessage = 2;
}

message GetCloudProvidersRequest {
}

message CloudProvider {
    string id = 1;
    repeated string labels = 2;
    string lastUpdateTime = 3;
    string accessKey = 4;
    string secretKey = 5;
}

message GetCloudProvidersResponse {
    repeated CloudProvider cloudProviders = 1;
    StatusCode status = 2;
    string statusMessage = 3;
}

message GetCloudProvidersForLabelRequest {
    string label = 1;
}

message GetCloudProvidersForLabelResponse {
    repeated CloudProvider cloudProviders = 1;
    StatusCode status = 2;
    string statusMessage = 3;
}

message RegisterArgoCDProjectRequest {
    string id = 1;
}

message RegisterArgoCDProjectResponse {
    StatusCode status = 1;
    string statusMessage = 2;
}

message GetArgoCDProjectsRequest {
}

message GetArgoCDProjectsResponse {
    StatusCode status = 1;
    string statusMessage = 2;
    repeated ArgoCDProject projects = 3;
}

message UnRegisterArgoCDProjectRequest {
    string id = 1;
}

message UnRegisterArgoCDProjectResponse {
    StatusCode status = 1;
    string statusMessage = 2;
}

message ArgoCDProject {
    string id = 1;
    string projectUrl = 2;
    string status = 3;
}

message RegisterTektonProjectRequest {
    string id = 1;
}

message RegisterTektonProjectResponse {
    StatusCode status = 1;
    string statusMessage = 2;
}

message UnRegisterTektonProjectRequest {
    string id = 1;
}

message UnRegisterTektonProjectResponse {
    StatusCode status = 1;
    string statusMessage = 2;
}

message TektonProject {
    string id = 1;
    string gitProjectUrl = 2;
    string status = 3;
}

message GetTektonProjectsRequest {
}

message GetTektonProjectsResponse {
    StatusCode status = 1;
    string statusMessage = 2;
    repeated TektonProject projects = 3;
}
